Adds puzzles.js, ability to render codeblocks

--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html>
   <head>
     <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="node_modules/xterm/lib/xterm.js"></script>
   </head>
   <body>
     <div id="terminal"></div>
+    <table id="code">
+      <!-- <tr>
+        <td class="ln">1.</td>
+        <td class="text">This is the first tr</td>
+      </tr>
+      <tr>
+        <td class="ln">2.</td>
+        <td class="text">This is the next tr</td>
+      </tr>
+      <tr>
+        <td class="ln">3.</td>
+        <td class="text">This is the third tr</td>
+      </tr> -->
+    </table>
     <script src="main.js" type="module"></script>
   </body>
 </html>
